Wed Sep  2 09:54:22 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 * AsciiDoc work on the website (4th step): 
   - docs/website/css/: move all CSS files here,
   - docs/website/css/ie6-overrides.css, docs/website/web-layout.conf, 
     docs/website/scripts/nut_jquery.js: add IE6 compatibility
     (thanks to Sebastien Volle from Eaton),
   - docs/website/Makefile.am: integrate the Developer and Packager Guides into
     the website,
   - docs/website/build-website.sh: removed since it's not useful anymore,
   - docs/website/{acknowledgements,download,projects,support}: minor update and
     completion
   - docs/features.txt: rework the format for inclusion in both the website and
     the User Manual.

Mon Aug 17 19:52:31 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - docs/website/images/: Website specific resources. Redundancies and
   optimization will be addressed later.

Sun Aug 16 12:17:31 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 * AsciiDoc work on the website (3rd step): 
   - README, docs/features.txt, : switch to AsciiDoc, and start trimming or
     rewriting the content,
   - docs/acknowledgements: some completion,
   - docs/website/download.txt: split "Development tree" into sub sections, and
     mention the snapshots availability through the BuildBot,
   - docs/website/projects.txt: rework the format for better output,
   - docs/website/documentation.txt: fix the links,
   - docs/website/{build-website,Makefile.am}: integrate new files (user-manual
     and ups-protocols)
   - docs/website/scripts/: move all .js scripts there,
   - docs/website/scripts/{*jquery.js, upsdata.js}: base scripts for the new
     dynamic Hardware Compatibility List,
   - docs/website/stable-hcl.txt: new dynamic Hardware Compatibility List
     (thanks to Sebastien Volle from Eaton)
   - docs/website/ups-protocols.txt: create the new entry point for the UPS
     Protocols Library,