@@ -32,7 +32,7 @@
     "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-<title>Network UPS Tools</title>
+<title>{doctitle}</title>
 <meta http-equiv="Content-Type" content="text/html; charset={encoding}" />
 <meta name="generator" content="AsciiDoc {asciidoc-version}" />
 ifdef::index-only[]
@@ -47,6 +47,7 @@ endif::quirks[]
 <link rel="stylesheet" href="{stylesdir=css}/web-layout.css" type="text/css" />
 <!--[if lte IE 6]>
 <link rel="stylesheet" href="{stylesdir=css}/ie6-overrides.css" type="text/css" />
+<script type="text/javascript" src="{scriptsdir=.}/filter_png.js"></script>
 <![endif]-->
 <link rel="shortcut icon" href="faviconut.ico" />
 <link rel="icon" href="faviconut.png" />
@@ -58,9 +59,9 @@ window.onload = function()\{generateToc({toclevels=2})\}
 </script>
 <script type="text/javascript" src="{scriptsdir=.}/toc.js"></script>
 endif::toc[]
-<title>{doctitle}</title>
-ifdef::hcl[]
 <script type="text/javascript" src="{scriptsdir=.}/jquery.js"></script>
+<script type="text/javascript" src="{scriptsdir=.}/content_size.js"></script>
+ifdef::hcl[]
 <script type="text/javascript" src="{scriptsdir=.}/ups_data.js"></script>
 <script language="javascript1.7" type="text/javascript" src="{scriptsdir=.}/nut_jquery.js"></script>
 endif::hcl[]
