@@ -1,3 +1,14 @@
+Tue Sep  8 13:55:54 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>
+
+ * AsciiDoc work on the website (5th step):
+   (thanks to Sebastien Volle from Eaton)
+   - docs/website/web-layout.conf, docs/website/css/web-layout.css,
+     docs/website/scripts/content_size.js: fix the layout issue with anchor and
+     content being shadowed by the banner. The new script recalculates the
+     layout-content box size, and enable the slider only for this area,
+   - docs/website/web-layout.conf, docs/website/scripts/filter_png.js: separate
+     and propagate the IE6 PNG fix to all pages.
+
 Wed Sep  2 09:54:22 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>
 
  * AsciiDoc work on the website (4th step): 
